import { describe, expect, it } from "vitest";
import { minifyContractRouter } from "@orpc/contract";
import { createTestingRawrHostSeam } from "../src/testing-host";

type RouteShape = {
  method?: string;
  path?: string;
};

function collectProcedureRoutes(node: unknown, namespace: string[] = []): string[] {
  if (!node || typeof node !== "object") return [];

  const asRecord = node as Record<string, unknown>;
  const maybeOrpc = asRecord["~orpc"];
  if (maybeOrpc && typeof maybeOrpc === "object") {
    const route = (maybeOrpc as { route?: RouteShape }).route ?? {};
    const method = route.method ?? "UNKNOWN";
    const path = route.path ?? "UNKNOWN";
    return [`${namespace.join(".")} ${method} ${path}`];
  }

  const items: string[] = [];
  for (const [key, value] of Object.entries(asRecord)) {
    items.push(...collectProcedureRoutes(value, [...namespace, key]));
  }
  return items;
}

describe("realized host contract drift", () => {
  const realization = createTestingRawrHostSeam().realization;

  it("keeps the realized internal procedure tree stable", () => {
    const minified = minifyContractRouter(realization.orpc.contract);
    const routes = collectProcedureRoutes(minified).sort();

    expect(routes).toEqual([
      "coordination.getRunStatus GET /coordination/runs/{runId}",
      "coordination.getRunTimeline GET /coordination/runs/{runId}/timeline",
      "coordination.getWorkflow GET /coordination/workflows/{workflowId}",
      "coordination.listWorkflows GET /coordination/workflows",
      "coordination.queueRun POST /coordination/workflows/{workflowId}/run",
      "coordination.saveWorkflow POST /coordination/workflows",
      "coordination.validateWorkflow POST /coordination/workflows/{workflowId}/validate",
      "exampleTodo.tasks.create POST /exampleTodo/tasks/create",
      "exampleTodo.tasks.get GET /exampleTodo/tasks/{id}",
      "state.getRuntimeState GET /state/runtime",
      "supportExample.triage.getStatus GET /support-example/triage/status",
      "supportExample.triage.triggerRun POST /support-example/triage/runs",
    ]);
    expect(minified).toMatchSnapshot();
  });

  it("keeps the realized published API contract stable", () => {
    const minified = minifyContractRouter(realization.orpc.published.contract);
    const routes = collectProcedureRoutes(minified).sort();

    expect(routes).toEqual([
      "exampleTodo.tasks.create POST /exampleTodo/tasks/create",
      "exampleTodo.tasks.get GET /exampleTodo/tasks/{id}",
    ]);
    expect(minified).toMatchSnapshot();
  });

  it("keeps the realized published workflow contract stable", () => {
    const minified = minifyContractRouter(realization.workflows.published.contract);
    const routes = collectProcedureRoutes(minified).sort();

    expect(routes).toEqual([
      "coordination.getRunStatus GET /coordination/runs/{runId}",
      "coordination.getRunTimeline GET /coordination/runs/{runId}/timeline",
      "coordination.queueRun POST /coordination/workflows/{workflowId}/run",
      "supportExample.triage.getStatus GET /support-example/triage/status",
      "supportExample.triage.triggerRun POST /support-example/triage/runs",
    ]);
    expect(minified).toMatchSnapshot();
  });
});
