// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`realized host contract drift > keeps the realized internal procedure tree stable 1`] = `
{
  "coordination": {
    "getRunStatus": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "run",
          "idempotent": true,
        },
        "route": {
          "method": "GET",
          "operationId": "coordinationWorkflowGetRunStatus",
          "path": "/coordination/runs/{runId}",
          "summary": "Get coordination workflow run status",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "getRunTimeline": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "run",
          "idempotent": true,
        },
        "route": {
          "method": "GET",
          "operationId": "coordinationWorkflowGetRunTimeline",
          "path": "/coordination/runs/{runId}/timeline",
          "summary": "Get coordination workflow run timeline",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "getWorkflow": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "workflow",
          "idempotent": true,
        },
        "route": {
          "method": "GET",
          "operationId": "coordinationGetWorkflow",
          "path": "/coordination/workflows/{workflowId}",
          "summary": "Get a coordination workflow by id",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "listWorkflows": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "workflow",
          "idempotent": true,
        },
        "route": {
          "method": "GET",
          "operationId": "coordinationListWorkflows",
          "path": "/coordination/workflows",
          "summary": "List saved coordination workflows",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "queueRun": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "run",
          "idempotent": false,
        },
        "route": {
          "method": "POST",
          "operationId": "coordinationWorkflowQueueRun",
          "path": "/coordination/workflows/{workflowId}/run",
          "summary": "Queue a coordination workflow run",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "saveWorkflow": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "workflow",
          "idempotent": false,
        },
        "route": {
          "method": "POST",
          "operationId": "coordinationSaveWorkflow",
          "path": "/coordination/workflows",
          "summary": "Create or update a coordination workflow",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "validateWorkflow": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "workflow",
          "idempotent": true,
        },
        "route": {
          "method": "POST",
          "operationId": "coordinationValidateWorkflow",
          "path": "/coordination/workflows/{workflowId}/validate",
          "summary": "Validate a coordination workflow",
          "tags": [
            "coordination",
          ],
        },
      },
    },
  },
  "exampleTodo": {
    "tasks": {
      "create": {
        "~orpc": {
          "errorMap": {},
          "meta": {
            "audience": "internal",
            "audit": "basic",
            "domain": "todo",
            "entity": "service",
            "idempotent": false,
          },
          "route": {
            "method": "POST",
            "operationId": "exampleTodoCreateTask",
            "path": "/exampleTodo/tasks/create",
            "summary": "Create a task in the example todo capability",
            "tags": [
              "exampleTodo",
            ],
          },
        },
      },
      "get": {
        "~orpc": {
          "errorMap": {},
          "meta": {
            "audience": "internal",
            "audit": "basic",
            "domain": "todo",
            "entity": "service",
            "idempotent": true,
          },
          "route": {
            "method": "GET",
            "operationId": "exampleTodoGetTask",
            "path": "/exampleTodo/tasks/{id}",
            "summary": "Get a task from the example todo capability",
            "tags": [
              "exampleTodo",
            ],
          },
        },
      },
    },
  },
  "state": {
    "getRuntimeState": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "state",
          "entity": "state",
          "idempotent": true,
        },
        "route": {
          "method": "GET",
          "operationId": "stateGetRuntimeState",
          "path": "/state/runtime",
          "summary": "Read runtime plugin state",
          "tags": [
            "state",
          ],
        },
      },
    },
  },
  "supportExample": {
    "triage": {
      "getStatus": {
        "~orpc": {
          "errorMap": {},
          "meta": {},
          "route": {
            "description": "Returns capability health plus optional status details for a specific support triage run.",
            "method": "GET",
            "operationId": "supportExampleGetStatus",
            "path": "/support-example/triage/status",
            "summary": "Get support triage capability status and optional run status",
            "tags": [
              "support-example",
            ],
          },
        },
      },
      "triggerRun": {
        "~orpc": {
          "errorMap": {},
          "meta": {},
          "route": {
            "description": "Queues a durable support triage run and dispatches the corresponding Inngest event.",
            "method": "POST",
            "operationId": "supportExampleTriggerRun",
            "path": "/support-example/triage/runs",
            "summary": "Trigger a support triage run",
            "tags": [
              "support-example",
            ],
          },
        },
      },
    },
  },
}
`;

exports[`realized host contract drift > keeps the realized published API contract stable 1`] = `
{
  "exampleTodo": {
    "tasks": {
      "create": {
        "~orpc": {
          "errorMap": {},
          "meta": {
            "audience": "internal",
            "audit": "basic",
            "domain": "todo",
            "entity": "service",
            "idempotent": false,
          },
          "route": {
            "method": "POST",
            "operationId": "exampleTodoCreateTask",
            "path": "/exampleTodo/tasks/create",
            "summary": "Create a task in the example todo capability",
            "tags": [
              "exampleTodo",
            ],
          },
        },
      },
      "get": {
        "~orpc": {
          "errorMap": {},
          "meta": {
            "audience": "internal",
            "audit": "basic",
            "domain": "todo",
            "entity": "service",
            "idempotent": true,
          },
          "route": {
            "method": "GET",
            "operationId": "exampleTodoGetTask",
            "path": "/exampleTodo/tasks/{id}",
            "summary": "Get a task from the example todo capability",
            "tags": [
              "exampleTodo",
            ],
          },
        },
      },
    },
  },
}
`;

exports[`realized host contract drift > keeps the realized published workflow contract stable 1`] = `
{
  "coordination": {
    "getRunStatus": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "run",
          "idempotent": true,
        },
        "route": {
          "method": "GET",
          "operationId": "coordinationWorkflowGetRunStatus",
          "path": "/coordination/runs/{runId}",
          "summary": "Get coordination workflow run status",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "getRunTimeline": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "run",
          "idempotent": true,
        },
        "route": {
          "method": "GET",
          "operationId": "coordinationWorkflowGetRunTimeline",
          "path": "/coordination/runs/{runId}/timeline",
          "summary": "Get coordination workflow run timeline",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "queueRun": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "run",
          "idempotent": false,
        },
        "route": {
          "method": "POST",
          "operationId": "coordinationWorkflowQueueRun",
          "path": "/coordination/workflows/{workflowId}/run",
          "summary": "Queue a coordination workflow run",
          "tags": [
            "coordination",
          ],
        },
      },
    },
  },
  "supportExample": {
    "triage": {
      "getStatus": {
        "~orpc": {
          "errorMap": {},
          "meta": {},
          "route": {
            "description": "Returns capability health plus optional status details for a specific support triage run.",
            "method": "GET",
            "operationId": "supportExampleGetStatus",
            "path": "/support-example/triage/status",
            "summary": "Get support triage capability status and optional run status",
            "tags": [
              "support-example",
            ],
          },
        },
      },
      "triggerRun": {
        "~orpc": {
          "errorMap": {},
          "meta": {},
          "route": {
            "description": "Queues a durable support triage run and dispatches the corresponding Inngest event.",
            "method": "POST",
            "operationId": "supportExampleTriggerRun",
            "path": "/support-example/triage/runs",
            "summary": "Trigger a support triage run",
            "tags": [
              "support-example",
            ],
          },
        },
      },
    },
  },
}
`;

exports[`realized host contract drift keeps the realized internal procedure tree stable 1`] = `
{
  "coordination": {
    "getRunStatus": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "run",
          "idempotent": true,
        },
        "route": {
          "method": "GET",
          "operationId": "coordinationWorkflowGetRunStatus",
          "path": "/coordination/runs/{runId}",
          "summary": "Get coordination workflow run status",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "getRunTimeline": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "run",
          "idempotent": true,
        },
        "route": {
          "method": "GET",
          "operationId": "coordinationWorkflowGetRunTimeline",
          "path": "/coordination/runs/{runId}/timeline",
          "summary": "Get coordination workflow run timeline",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "getWorkflow": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "workflow",
          "idempotent": true,
        },
        "route": {
          "method": "GET",
          "operationId": "coordinationGetWorkflow",
          "path": "/coordination/workflows/{workflowId}",
          "summary": "Get a coordination workflow by id",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "listWorkflows": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "workflow",
          "idempotent": true,
        },
        "route": {
          "method": "GET",
          "operationId": "coordinationListWorkflows",
          "path": "/coordination/workflows",
          "summary": "List saved coordination workflows",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "queueRun": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "run",
          "idempotent": false,
        },
        "route": {
          "method": "POST",
          "operationId": "coordinationWorkflowQueueRun",
          "path": "/coordination/workflows/{workflowId}/run",
          "summary": "Queue a coordination workflow run",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "saveWorkflow": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "workflow",
          "idempotent": false,
        },
        "route": {
          "method": "POST",
          "operationId": "coordinationSaveWorkflow",
          "path": "/coordination/workflows",
          "summary": "Create or update a coordination workflow",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "validateWorkflow": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "workflow",
          "idempotent": true,
        },
        "route": {
          "method": "POST",
          "operationId": "coordinationValidateWorkflow",
          "path": "/coordination/workflows/{workflowId}/validate",
          "summary": "Validate a coordination workflow",
          "tags": [
            "coordination",
          ],
        },
      },
    },
  },
  "exampleTodo": {
    "tasks": {
      "create": {
        "~orpc": {
          "errorMap": {},
          "meta": {
            "audience": "internal",
            "audit": "basic",
            "domain": "todo",
            "entity": "service",
            "idempotent": false,
          },
          "route": {
            "method": "POST",
            "operationId": "exampleTodoCreateTask",
            "path": "/exampleTodo/tasks/create",
            "summary": "Create a task in the example todo capability",
            "tags": [
              "exampleTodo",
            ],
          },
        },
      },
      "get": {
        "~orpc": {
          "errorMap": {},
          "meta": {
            "audience": "internal",
            "audit": "basic",
            "domain": "todo",
            "entity": "service",
            "idempotent": true,
          },
          "route": {
            "method": "GET",
            "operationId": "exampleTodoGetTask",
            "path": "/exampleTodo/tasks/{id}",
            "summary": "Get a task from the example todo capability",
            "tags": [
              "exampleTodo",
            ],
          },
        },
      },
    },
  },
  "state": {
    "getRuntimeState": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "state",
          "entity": "state",
          "idempotent": true,
        },
        "route": {
          "method": "GET",
          "operationId": "stateGetRuntimeState",
          "path": "/state/runtime",
          "summary": "Read runtime plugin state",
          "tags": [
            "state",
          ],
        },
      },
    },
  },
  "supportExample": {
    "triage": {
      "getStatus": {
        "~orpc": {
          "errorMap": {},
          "meta": {},
          "route": {
            "description": "Returns capability health plus optional status details for a specific support triage run.",
            "method": "GET",
            "operationId": "supportExampleGetStatus",
            "path": "/support-example/triage/status",
            "summary": "Get support triage capability status and optional run status",
            "tags": [
              "support-example",
            ],
          },
        },
      },
      "triggerRun": {
        "~orpc": {
          "errorMap": {},
          "meta": {},
          "route": {
            "description": "Queues a durable support triage run and dispatches the corresponding Inngest event.",
            "method": "POST",
            "operationId": "supportExampleTriggerRun",
            "path": "/support-example/triage/runs",
            "summary": "Trigger a support triage run",
            "tags": [
              "support-example",
            ],
          },
        },
      },
    },
  },
}
`;

exports[`realized host contract drift keeps the realized published API contract stable 1`] = `
{
  "exampleTodo": {
    "tasks": {
      "create": {
        "~orpc": {
          "errorMap": {},
          "meta": {
            "audience": "internal",
            "audit": "basic",
            "domain": "todo",
            "entity": "service",
            "idempotent": false,
          },
          "route": {
            "method": "POST",
            "operationId": "exampleTodoCreateTask",
            "path": "/exampleTodo/tasks/create",
            "summary": "Create a task in the example todo capability",
            "tags": [
              "exampleTodo",
            ],
          },
        },
      },
      "get": {
        "~orpc": {
          "errorMap": {},
          "meta": {
            "audience": "internal",
            "audit": "basic",
            "domain": "todo",
            "entity": "service",
            "idempotent": true,
          },
          "route": {
            "method": "GET",
            "operationId": "exampleTodoGetTask",
            "path": "/exampleTodo/tasks/{id}",
            "summary": "Get a task from the example todo capability",
            "tags": [
              "exampleTodo",
            ],
          },
        },
      },
    },
  },
}
`;

exports[`realized host contract drift keeps the realized published workflow contract stable 1`] = `
{
  "coordination": {
    "getRunStatus": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "run",
          "idempotent": true,
        },
        "route": {
          "method": "GET",
          "operationId": "coordinationWorkflowGetRunStatus",
          "path": "/coordination/runs/{runId}",
          "summary": "Get coordination workflow run status",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "getRunTimeline": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "run",
          "idempotent": true,
        },
        "route": {
          "method": "GET",
          "operationId": "coordinationWorkflowGetRunTimeline",
          "path": "/coordination/runs/{runId}/timeline",
          "summary": "Get coordination workflow run timeline",
          "tags": [
            "coordination",
          ],
        },
      },
    },
    "queueRun": {
      "~orpc": {
        "errorMap": {},
        "meta": {
          "audience": "internal",
          "domain": "coordination",
          "entity": "run",
          "idempotent": false,
        },
        "route": {
          "method": "POST",
          "operationId": "coordinationWorkflowQueueRun",
          "path": "/coordination/workflows/{workflowId}/run",
          "summary": "Queue a coordination workflow run",
          "tags": [
            "coordination",
          ],
        },
      },
    },
  },
  "supportExample": {
    "triage": {
      "getStatus": {
        "~orpc": {
          "errorMap": {},
          "meta": {},
          "route": {
            "description": "Returns capability health plus optional status details for a specific support triage run.",
            "method": "GET",
            "operationId": "supportExampleGetStatus",
            "path": "/support-example/triage/status",
            "summary": "Get support triage capability status and optional run status",
            "tags": [
              "support-example",
            ],
          },
        },
      },
      "triggerRun": {
        "~orpc": {
          "errorMap": {},
          "meta": {},
          "route": {
            "description": "Queues a durable support triage run and dispatches the corresponding Inngest event.",
            "method": "POST",
            "operationId": "supportExampleTriggerRun",
            "path": "/support-example/triage/runs",
            "summary": "Trigger a support triage run",
            "tags": [
              "support-example",
            ],
          },
        },
      },
    },
  },
}
`;
